--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
     "knex": "^0.19.5",
     "newrelic": "^1.36.1",
     "pg": "^8.2.1"
+  },
+  "resolutions": {
+    "graceful-fs": "4.2.4"
   }
 }
